# commonroad-clcs

./: .gitignore  CMakeLists.txt  README.md  README_FOR_DEVELOPERS.md  pyproject.toml
ci/: .gitlab-ci.yml
ci/docker/: Dockerfile
cmake/: install.cmake
commonroad_clcs/: clcs.py  config.py  util.py
commonroad_clcs/helper/: evaluation.py  smoothing.py  visualization.py
commonroad_clcs/ref_path_processing/: factory.py  implementation.py
cpp/: CMakeLists.txt
cpp/include/geometry/: clcs_logger.h  curvilinear_coordinate_system.h  path_segments.h  projection_domain.h  util_sweep_line.h
cpp/src/: curvilinear_coordinate_system.cc  path_segments.cc  projection_domain.cc  segment.cc  util_sweep_line.cc
cpp/src/serialize/: serialize_curvil_cs.cc
python_binding/: CMakeLists.txt  module_geometry.cc
tests/: test_clcs_py_wrapper.py  test_coordinate_conversion.py  test_geometry.py  test_geometry_util.py  test_pickle.py  test_projection_domain.py  test_ref_path_processor.py
tests/scripts/: clcs_batch_conversion_script.py
tests/test_data/: reference_path_b_data_new.pic
tutorials/: USA_Peach-2_1_T-1.xml  ccosy_proj_domain.py  clcs_minimal_example.py
tutorials/notebooks/: 00_getting_started.ipynb  01_advanced.ipynb  02_ref_path_processing.ipynb
